unsubscribe not delete mark as read post

--- a/nekidaem.django/blog/templates/posts/posts_ribbon.html
+++ b/nekidaem.django/blog/templates/posts/posts_ribbon.html
@@ -18,11 +18,11 @@
                 <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
                 от {{ item.author.user.username }}
 
-            {% if item.readedpost %}
-            <a href="{{ item.get_absolute_url }}">Прочитано {{ item.readedpost.readed }}</a>
-        {% else %}
-            <a href="{{ item.get_absolute_url }}">Прочитать</a>
-            {% endif %}
+                {% if request.user not in item.read_by.all %}
+                    <small>Не прочитано</small>
+                {% else %}
+                    <small>Прочитано</small>
+                {% endif %}
 
             </li>
 
